--- a/sass/_sea-serpent.scss
+++ b/sass/_sea-serpent.scss
@@ -1,15 +1,25 @@
+.ss-corp__container {
+  grid-column: col-end 4 / col-end 8;
+  display: grid;
+  grid-template-rows: 65% 35%;
+}
+
 .sea-serpent {
-  &__container {
-    grid-column: col-end 4 / full-end;
-    @media only screen and (max-width: $bp-large) {
-      grid-column: full-start / full-end;
-    }
-    display: grid;
-  }
   &__content {
+    grid-row: 1 /2;
     background-image: url(../img/sea-serpent.png);
     background-repeat: no-repeat;
     background-position: 50% 60%;
     background-size: cover;
+    @media only screen and (max-width: $bp-large) {
+      grid-column: full-start / full-end;
+    }
+  }
+}
+
+.corporate {
+  &__container {
+    grid-row: 2 /3;
+    background-color: black;
   }
 }
