package json tests

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -32,9 +32,9 @@ body {
   grid-template-rows: 10rem 10rem 80vh 80vh min-content repeat(2, min-content);
   grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
   /* AFTER NOTES */ }
-  @media only screen and (max-width: 62.5em) {
+  @media only screen and (max-width: 87.5em) {
     .container {
-      grid-template-rows: 10rem 10rem calc(100vh - 20rem) calc(100vh - 20rem); } }
+      grid-template-rows: 10rem 10rem calc(100vh - 20rem) calc(100vh - 20rem) calc( 100vh - 20rem); } }
 
 .features {
   /* features go from center-start to center-end - beginning to end of centre 8 grid */
@@ -50,7 +50,8 @@ body {
   /* large being 87.5em - 1400px */ }
   @media only screen and (max-width: 87.5em) {
     .features {
-      margin: 5rem 0; } }
+      margin: 5rem 0;
+      grid-row: 7 / 8; } }
 
 .feature {
   /* Need to make the feature elements themselves individual grids */
@@ -70,10 +71,17 @@ body {
   background-color: #0a19a1;
   /* goes all the way from one end to the other end full bleed section */
   grid-column: full-start / full-end; }
+  @media only screen and (max-width: 87.5em) {
+    .footer {
+      grid-row: 10 /11; } }
 
 .banner {
   /* col-end 4 - halfway across the page */
-  grid-column: full-start / full-end; }
+  grid-column: full-start / col-end 4; }
+  @media only screen and (max-width: 87.5em) {
+    .banner {
+      /* want it to span whole page on smaller devices */
+      grid-column: full-start / full-end; } }
 
 .slideshow {
   height: 100%;
@@ -83,24 +91,70 @@ body {
     /* display images in a row using flex */
     display: flex;
     /* wrapper of 200vw because 4 images which are 50vw each - each image take up 1/4 of wrapper */
-    width: 400vw;
+    width: 200vw;
     height: 100%;
     /* because in the keyframes below we are manipulating the slideshow wrapper, we need to define the position
     as relative i.e. to move the wrapper left */
     position: relative;
     /* define animation property for wrapper as slideshow with the duration of 15 seconds */
     animation: slideshow 15s infinite; }
+    @media only screen and (max-width: 87.5em) {
+      .slideshow__wrapper {
+        width: 400vw;
+        animation: slideshowSmallViewport 15s infinite; } }
 
 .slide__image {
   height: 100%;
   /* want the width to be half the viewport hence 50vw */
-  width: 100vw;
+  width: 50vw;
   /* image keeps its aspect ratio (so not stretched) and fills the given dimension. Image = clipped to fit */
   object-fit: cover;
   position: relative; }
+  @media only screen and (max-width: 87.5em) {
+    .slide__image {
+      /* want images to span whole viewport width smaller devices */
+      width: 100vw; } }
+
+.slide__image::after {
+  height: 100%;
+  width: 50vw;
+  background: linear-gradient(rgba(249, 247, 246, 0.7), rgba(249, 247, 246, 0.7));
+  z-index: 100; }
+
+/* keyframes percentages? = percentage of the animation duration */
+@keyframes slideshow {
+  /* in the timeframe of the animation we don't want to image to move for a while - so need to define the 
+left position as 0. This is for 0 to 5% of the animation */
+  0% {
+    left: 0; }
+  5% {
+    left: 0; }
+  /* after 0-5% of animation time, want image to be moved to the left by its width - 50vw */
+  /* this'll mean first image is entirely hidden and the second one is displayed */
+  10% {
+    left: -50vw; }
+  /* second image displayed from 10% to 30% */
+  30% {
+    left: -50vw; }
+  /* need we need to hide second image and display the third one - hence -100vw */
+  35% {
+    left: -100vw; }
+  /* third image displayed from 35% to 55% */
+  55% {
+    left: -100vw; }
+  /* need to hide third image and display fourth one - hence -150vw */
+  60% {
+    left: -150vw; }
+  /* fourth image displayed from 60% to 80% */
+  80% {
+    left: -150vw; }
+  85% {
+    left: 0vw; }
+  100% {
+    left: 0vw; } }
 
 /* remember- each image is now 100vw, so need to move -100vw to the left to go to next image etc */
-@keyframes slideshow {
+@keyframes slideshowSmallViewport {
   0% {
     left: 0; }
   5% {
@@ -131,7 +185,7 @@ body {
   cursor: pointer;
   outline: none;
   position: absolute;
-  top: 195%;
+  top: 90%;
   /* perfect positioning horizontally */
   transform: translateX(-50%);
   /* want to put the buttons on top of the slideshow */
@@ -139,31 +193,34 @@ body {
   /* position absolute will put one button on top of another so need to move them individually */
   /* remember the quarter of the way across the page is 25% so want 22, 24, 26 and 28 of the way across 
     the viewport, to center it albeit in a slideshow spanning halfway the viewport 50vw */ }
-  @media only screen and (max-width: 62.5em) {
+  @media only screen and (max-width: 87.5em) {
+    .slide__btn {
+      top: 80%; } }
+  @media only screen and (max-width: 87.5em) {
     .slide__btn {
       /* make buttons bigger on smaller devices so they're easier to click on phones */
       width: 1.8rem;
       height: 1.8rem; } }
   .slide__btn--1 {
-    left: 44%; }
-    @media only screen and (max-width: 62.5em) {
+    left: 22%; }
+    @media only screen and (max-width: 87.5em) {
       .slide__btn--1 {
-        left: 40%; } }
+        left: 38%; } }
   .slide__btn--2 {
-    left: 48%; }
-    @media only screen and (max-width: 62.5em) {
+    left: 24%; }
+    @media only screen and (max-width: 87.5em) {
       .slide__btn--2 {
-        left: 45%; } }
+        left: 46%; } }
   .slide__btn--3 {
-    left: 52%; }
-    @media only screen and (max-width: 62.5em) {
+    left: 26%; }
+    @media only screen and (max-width: 87.5em) {
       .slide__btn--3 {
-        left: 55%; } }
+        left: 54%; } }
   .slide__btn--4 {
-    left: 56%; }
-    @media only screen and (max-width: 62.5em) {
+    left: 28%; }
+    @media only screen and (max-width: 87.5em) {
       .slide__btn--4 {
-        left: 60%; } }
+        left: 62%; } }
 
 /* first of all need to make sure its obvious which button we are focusing on when click it */
 .slide__btn:focus {
@@ -180,7 +237,7 @@ body {
   animation: none;
   /* when we focus on second button, we need to display second image */
   left: -50vw; }
-  @media only screen and (max-width: 62.5em) {
+  @media only screen and (max-width: 87.5em) {
     .slide__btn--2:focus ~ .slideshow__wrapper {
       /* viewport width of images is npw 100vw - so to click through each one need -100vw */
       left: -100vw; } }
@@ -190,7 +247,7 @@ body {
   animation: none;
   /* when we focus on third button, we need to display third image */
   left: -100vw; }
-  @media only screen and (max-width: 62.5em) {
+  @media only screen and (max-width: 87.5em) {
     .slide__btn--3:focus ~ .slideshow__wrapper {
       left: -200vw; } }
 
@@ -199,7 +256,7 @@ body {
   animation: none;
   /* when we focus on fourth button, we need to display fourth image */
   left: -150vw; }
-  @media only screen and (max-width: 62.5em) {
+  @media only screen and (max-width: 87.5em) {
     .slide__btn--4:focus ~ .slideshow__wrapper {
       left: -300vw; } }
 
@@ -215,7 +272,8 @@ body {
   /* MEDIA QUERY - when width of screen is 87.5rem ($bp-largest) */ }
   @media only screen and (max-width: 87.5em) {
     .players {
-      grid-column: full-start / full-end; } }
+      grid-column: full-start / full-end;
+      grid-row: 6 / 7; } }
   .players__list {
     display: grid;
     /* first column for images, second for the text */
@@ -520,16 +578,17 @@ body {
     grid-template-columns: repeat(6, 1fr);
     align-items: center;
     /* MEDIA QUERY - when width of screen is 62.5rem ($bp-large) */ }
-    @media only screen and (max-width: 62.5em) {
+    @media only screen and (max-width: 87.5em) {
       .story__pictures {
         grid-column: full-start / full-end;
+        grid-row: 8 / 9;
         padding: 5rem; } }
   .story__img--1 {
     width: 100%;
     grid-row: 2 / 6;
     grid-column: 1 / 5;
     /* large being 62.5em - 1000px */ }
-    @media only screen and (max-width: 62.5em) {
+    @media only screen and (max-width: 87.5em) {
       .story__img--1 {
         grid-column: 1 / 4;
         grid-row: 1 / -1;
@@ -541,7 +600,7 @@ body {
     grid-row: 1 / 5;
     grid-column: 4 / 7;
     /* large being 62.5em - 1000px */ }
-    @media only screen and (max-width: 62.5em) {
+    @media only screen and (max-width: 87.5em) {
       .story__img--2 {
         grid-row: 1 / -1;
         width: 100%;
@@ -555,10 +614,10 @@ body {
     justify-content: center;
     align-items: flex-start;
     /* large being 62.5em - 1000px */ }
-    @media only screen and (max-width: 62.5em) {
+    @media only screen and (max-width: 87.5em) {
       .story__content {
         grid-column: full-start / full-end;
-        grid-row: 5 / 6; } }
+        grid-row: 9 / 10; } }
   .story__text {
     font-size: 1.5rem;
     margin-bottom: 4rem; }
@@ -613,3 +672,28 @@ body {
 
 .mb-hg {
   margin-bottom: 8rem; }
+
+.table__container {
+  grid-column: col-end 8 / full-end;
+  background-color: blue; }
+
+.ss-corp__container {
+  grid-column: col-end 4 / col-end 8;
+  display: grid;
+  grid-template-rows: 65% 35%; }
+
+.sea-serpent__content {
+  grid-row: 1 /2;
+  background-image: url(../img/sea-serpent.png);
+  background-repeat: no-repeat;
+  /* first value = horizontal position. second = vertical. Top left corner = 0% 0%, 
+    right corner = 100% 100% */
+  background-position: 50% 60%;
+  background-size: cover; }
+  @media only screen and (max-width: 62.5em) {
+    .sea-serpent__content {
+      grid-column: full-start / full-end; } }
+
+.corporate__container {
+  grid-row: 2 /3;
+  background-color: black; }
