--- a/sass/_table.scss
+++ b/sass/_table.scss
@@ -2,5 +2,23 @@
   &__container {
     grid-column: col-end 8 / full-end;
     background-color: $color-grey-2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+  &__row {
+    position: relative;
+  }
+  &__cube {
+    position: relative;
+    width: 10rem;
+    height: 10rem;
+    &--1 {
+    }
+    &--2 {
+    }
+    &--3 {
+    }
   }
 }
