--- a/css/style.css
+++ b/css/style.css
@@ -686,8 +686,16 @@ left position as 0. This is for 0 to 5% of the animation */
 
 .table__cube {
   position: relative;
-  width: 10rem;
-  height: 10rem; }
+  width: 8rem;
+  height: 8rem; }
+  .table__cube--item {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: red; }
 
 .ss-corp__container {
   grid-column: col-end 4 / col-end 8;
