--- a/sass/_table.scss
+++ b/sass/_table.scss
@@ -12,8 +12,17 @@
   }
   &__cube {
     position: relative;
-    width: 10rem;
-    height: 10rem;
+    width: 8rem;
+    height: 8rem;
+    &--item {
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 100%;
+      background-color: red;
+    }
     &--1 {
     }
     &--2 {
