--- a/css/style.css
+++ b/css/style.css
@@ -675,7 +675,7 @@ left position as 0. This is for 0 to 5% of the animation */
 
 .table__container {
   grid-column: col-end 8 / full-end;
-  background-color: #aaa;
+  background-color: #101d2c;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -686,8 +686,8 @@ left position as 0. This is for 0 to 5% of the animation */
 
 .table__cube {
   position: relative;
-  width: 8rem;
-  height: 8rem; }
+  width: 7rem;
+  height: 7rem; }
   .table__cube--item {
     position: absolute;
     top: 0;
@@ -695,7 +695,7 @@ left position as 0. This is for 0 to 5% of the animation */
     display: block;
     width: 100%;
     height: 100%;
-    background-color: red; }
+    background-color: #f9f7f6; }
 
 .ss-corp__container {
   grid-column: col-end 4 / col-end 8;
