--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -5,6 +5,7 @@ $color-secondary: #101d2c;
 
 $color-grey-1: #f9f7f6;
 $color-grey-2: #aaa;
+$color-grey-3: #888;
 
 /* FONT VARIABLES */
 /* For general body */
