--- a/css/style.css
+++ b/css/style.css
@@ -696,6 +696,28 @@ left position as 0. This is for 0 to 5% of the animation */
     width: 100%;
     height: 100%;
     background-color: #f9f7f6; }
+  .table__cube--1 {
+    clip-path: polygon(50% 0%, 100% 25%, 50% 50%, 0 25%); }
+  .table__cube--2 {
+    clip-path: polygon(0 75%, 50% 100%, 50% 50%, 0 25%); }
+    .table__cube--2::before {
+      content: '';
+      position: absolute;
+      top: 0%;
+      left: 0%;
+      width: 100%;
+      height: 100%;
+      background-color: #aaa; }
+  .table__cube--3 {
+    clip-path: polygon(100% 75%, 50% 100%, 50% 50%, 100% 25%); }
+    .table__cube--3::before {
+      content: '';
+      position: absolute;
+      top: 0%;
+      left: 0%;
+      width: 100%;
+      height: 100%;
+      background-color: #888; }
 
 .ss-corp__container {
   grid-column: col-end 4 / col-end 8;
