--- a/sass/_table.scss
+++ b/sass/_table.scss
@@ -24,10 +24,31 @@
       background-color: $color-grey-1;
     }
     &--1 {
+      clip-path: polygon(50% 0%, 100% 25%, 50% 50%, 0 25%);
     }
     &--2 {
+      clip-path: polygon(0 75%, 50% 100%, 50% 50%, 0 25%);
+      &::before {
+        content: '';
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        width: 100%;
+        height: 100%;
+        background-color: $color-grey-2;
+      }
     }
     &--3 {
+      clip-path: polygon(100% 75%, 50% 100%, 50% 50%, 100% 25%);
+      &::before {
+        content: '';
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        width: 100%;
+        height: 100%;
+        background-color: $color-grey-3;
+      }
     }
   }
 }
