--- a/sass/_table.scss
+++ b/sass/_table.scss
@@ -1,19 +1,32 @@
 .table {
   &__container {
+    /* this section to go from column 8 to the right side of the viewport horzionatally */
     grid-column: col-end 8 / full-end;
     background-color: $color-secondary;
     display: flex;
+    /* align content center horizontally in flex */
     justify-content: center;
+    /* align content center vertically in flex */
     align-items: center;
     position: relative;
+    /* height of the container */
+    min-height: 70vh;
+    /* overflow is clipped at height of the container - rest is hidden */
+    overflow: hidden;
   }
   &__row {
     position: relative;
+    /* display inline-flex - makes the flex container display inline */
+    /* inline meaning - element display inline - inside the current block on the same line */
+    /* this will make the container display in a row */
+    display: inline-flex;
   }
   &__cube {
     position: relative;
-    width: 7rem;
-    height: 7rem;
+    /* dimensions below are for overall cude shape - each polygon side going to fit within this */
+    width: 10rem;
+    height: 10rem;
+    /* item being each individual side of the cube */
     &--item {
       position: absolute;
       top: 0;
@@ -24,11 +37,14 @@
       background-color: $color-grey-1;
     }
     &--1 {
+      /* top of the cube */
       clip-path: polygon(50% 0%, 100% 25%, 50% 50%, 0 25%);
     }
     &--2 {
+      /* left side of cube */
       clip-path: polygon(0 75%, 50% 100%, 50% 50%, 0 25%);
       &::before {
+        /* setting styles for before element to change the background-color to distinguish from rest of code */
         content: '';
         position: absolute;
         top: 0%;
@@ -39,8 +55,10 @@
       }
     }
     &--3 {
+      /* right side of cube */
       clip-path: polygon(100% 75%, 50% 100%, 50% 50%, 100% 25%);
       &::before {
+        /* setting styles for before element to change the background-color to distinguish from rest of code */
         content: '';
         position: absolute;
         top: 0%;
