--- a/css/style.css
+++ b/css/style.css
@@ -676,7 +676,10 @@ left position as 0. This is for 0 to 5% of the animation */
 .table__container {
   /* this section to go from column 8 to the right side of the viewport horzionatally */
   grid-column: col-end 8 / full-end;
-  background-color: #aaa;
+  background-color: #101d2c;
+  background-image: url(../img/identity/football-badge-white.png);
+  background-position: center;
+  background-size: cover;
   position: relative;
   /* height of the container */
   min-height: 70vh;
@@ -687,7 +690,8 @@ left position as 0. This is for 0 to 5% of the animation */
   /* display inline-flex - makes the flex container display inline */
   /* inline meaning - element display inline - inside the current block on the same line */
   /* this will make the container display in a row */
-  display: inline-flex; }
+  display: inline-flex;
+  opacity: 0.9; }
 
 .table__cube {
   position: relative;
@@ -702,7 +706,7 @@ left position as 0. This is for 0 to 5% of the animation */
     display: block;
     width: 100%;
     height: 100%;
-    background-color: #f9f7f6; }
+    background-color: white; }
   .table__cube--1 {
     /* top of the cube */
     clip-path: polygon(50% 0%, 100% 25%, 50% 50%, 0 25%); }
@@ -717,7 +721,7 @@ left position as 0. This is for 0 to 5% of the animation */
       left: 0%;
       width: 100%;
       height: 100%;
-      background-color: #aaa; }
+      background-color: #f9f7f6; }
   .table__cube--3 {
     /* right side of cube */
     clip-path: polygon(100% 75%, 50% 100%, 50% 50%, 100% 25%); }
@@ -729,7 +733,7 @@ left position as 0. This is for 0 to 5% of the animation */
       left: 0%;
       width: 100%;
       height: 100%;
-      background-color: #888; }
+      background-color: #aaa; }
 
 .ss-corp__container {
   grid-column: col-end 4 / col-end 8;
