--- a/sass/_table.scss
+++ b/sass/_table.scss
@@ -2,7 +2,10 @@
   &__container {
     /* this section to go from column 8 to the right side of the viewport horzionatally */
     grid-column: col-end 8 / full-end;
-    background-color: $color-grey-2;
+    background-color: $color-secondary;
+    background-image: url(../img/identity/football-badge-white.png);
+    background-position: center;
+    background-size: cover;
     position: relative;
     /* height of the container */
     min-height: 70vh;
@@ -14,6 +17,7 @@
     /* inline meaning - element display inline - inside the current block on the same line */
     /* this will make the container display in a row */
     display: inline-flex;
+    opacity: 0.9;
   }
   &__cube {
     position: relative;
@@ -28,7 +32,7 @@
       display: block;
       width: 100%;
       height: 100%;
-      background-color: $color-grey-1;
+      background-color: white;
     }
     &--1 {
       /* top of the cube */
@@ -45,7 +49,7 @@
         left: 0%;
         width: 100%;
         height: 100%;
-        background-color: $color-grey-2;
+        background-color: $color-grey-1;
       }
     }
     &--3 {
@@ -59,7 +63,7 @@
         left: 0%;
         width: 100%;
         height: 100%;
-        background-color: $color-grey-3;
+        background-color: $color-grey-2;
       }
     }
   }
