--- a/css/style.css
+++ b/css/style.css
@@ -677,7 +677,7 @@ left position as 0. This is for 0 to 5% of the animation */
   /* this section to go from column 8 to the right side of the viewport horzionatally */
   grid-column: col-end 8 / full-end;
   background-color: #101d2c;
-  background-image: url(../img/identity/football-badge-white.png);
+  background-image: linear-gradient(rgba(249, 247, 246, 0.1), rgba(249, 247, 246, 0.1)), url(../img/identity/football-badge-white.png);
   background-position: center;
   background-size: cover;
   position: relative;
