change of css code

--- a/css/style.css
+++ b/css/style.css
@@ -673,33 +673,32 @@ left position as 0. This is for 0 to 5% of the animation */
 .mb-hg {
   margin-bottom: 8rem; }
 
-.table__container {
-  /* this section to go from column 8 to the right side of the viewport horzionatally */
-  grid-column: col-end 8 / full-end;
-  background-color: #101d2c;
-  background-image: linear-gradient(rgba(249, 247, 246, 0.1), rgba(249, 247, 246, 0.1)), url(../img/identity/football-badge-white.png);
-  background-position: center;
-  background-size: cover;
-  position: relative;
-  /* height of the container */
-  min-height: 70vh;
-  /* overflow is clipped at height of the container - rest is hidden */
-  overflow: hidden; }
-
-.table__row {
-  /* display inline-flex - makes the flex container display inline */
-  /* inline meaning - element display inline - inside the current block on the same line */
-  /* this will make the container display in a row */
-  display: inline-flex;
-  opacity: 0.9; }
-
-.table__cube {
-  position: relative;
-  /* dimensions below are for overall cude shape - each polygon side going to fit within this */
-  width: 10rem;
-  height: 10rem;
+.cube {
+  /* dimensions below are for overall cube shape - each polygon side going to fit within this */
   /* item being each individual side of the cube */ }
-  .table__cube--item {
+  .cube__container {
+    /* this section to go from column 8 to the right side of the viewport horzionatally */
+    grid-column: col-end 8 / full-end;
+    background-color: #101d2c;
+    background-image: linear-gradient(rgba(249, 247, 246, 0.2), rgba(249, 247, 246, 0.2)), url(../img/identity/football-badge-white.png);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    /* height of the container */
+    min-height: 70vh;
+    /* overflow is clipped at height of the container - rest is hidden */
+    overflow: hidden; }
+  .cube__row {
+    /* display inline-flex - makes the flex container display inline */
+    /* inline meaning - element display inline - inside the current block on the same line */
+    /* this will make the container display in a row */
+    display: inline-flex;
+    opacity: 0.9; }
+  .cube__shape {
+    position: relative;
+    width: 10rem;
+    height: 10rem; }
+  .cube__item {
     position: absolute;
     top: 0;
     left: 0;
@@ -707,33 +706,33 @@ left position as 0. This is for 0 to 5% of the animation */
     width: 100%;
     height: 100%;
     background-color: white; }
-  .table__cube--1 {
-    /* top of the cube */
-    clip-path: polygon(50% 0%, 100% 25%, 50% 50%, 0 25%); }
-  .table__cube--2 {
-    /* left side of cube */
-    clip-path: polygon(0 75%, 50% 100%, 50% 50%, 0 25%); }
-    .table__cube--2::before {
-      /* setting styles for before element to change the background-color to distinguish from rest of code */
-      content: '';
-      position: absolute;
-      top: 0%;
-      left: 0%;
-      width: 100%;
-      height: 100%;
-      background-color: #f9f7f6; }
-  .table__cube--3 {
-    /* right side of cube */
-    clip-path: polygon(100% 75%, 50% 100%, 50% 50%, 100% 25%); }
-    .table__cube--3::before {
-      /* setting styles for before element to change the background-color to distinguish from rest of code */
-      content: '';
-      position: absolute;
-      top: 0%;
-      left: 0%;
-      width: 100%;
-      height: 100%;
-      background-color: #aaa; }
+    .cube__item--1 {
+      /* top of the cube */
+      clip-path: polygon(50% 0%, 100% 25%, 50% 50%, 0 25%); }
+    .cube__item--2 {
+      /* left side of cube */
+      clip-path: polygon(0 75%, 50% 100%, 50% 50%, 0 25%); }
+      .cube__item--2::before {
+        /* setting styles for before element to change the background-color to distinguish from rest of code */
+        content: '';
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        width: 100%;
+        height: 100%;
+        background-color: #f9f7f6; }
+    .cube__item--3 {
+      /* right side of cube */
+      clip-path: polygon(100% 75%, 50% 100%, 50% 50%, 100% 25%); }
+      .cube__item--3::before {
+        /* setting styles for before element to change the background-color to distinguish from rest of code */
+        content: '';
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        width: 100%;
+        height: 100%;
+        background-color: #aaa; }
 
 .ss-corp__container {
   grid-column: col-end 4 / col-end 8;
