--- a/sass/_table.scss
+++ b/sass/_table.scss
@@ -1,11 +1,11 @@
-.table {
+.cube {
   &__container {
     /* this section to go from column 8 to the right side of the viewport horzionatally */
     grid-column: col-end 8 / full-end;
     background-color: $color-secondary;
     background-image: linear-gradient(
-        rgba($color-grey-1, 0.1),
-        rgba($color-grey-1, 0.1)
+        rgba($color-grey-1, 0.2),
+        rgba($color-grey-1, 0.2)
       ),
       url(../img/identity/football-badge-white.png);
     background-position: center;
@@ -23,21 +23,21 @@
     display: inline-flex;
     opacity: 0.9;
   }
-  &__cube {
+  /* dimensions below are for overall cube shape - each polygon side going to fit within this */
+  &__shape {
     position: relative;
-    /* dimensions below are for overall cude shape - each polygon side going to fit within this */
     width: 10rem;
     height: 10rem;
-    /* item being each individual side of the cube */
-    &--item {
-      position: absolute;
-      top: 0;
-      left: 0;
-      display: block;
-      width: 100%;
-      height: 100%;
-      background-color: white;
-    }
+  }
+  /* item being each individual side of the cube */
+  &__item {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: white;
     &--1 {
       /* top of the cube */
       clip-path: polygon(50% 0%, 100% 25%, 50% 50%, 0 25%);
