--- a/css/style.css
+++ b/css/style.css
@@ -705,10 +705,14 @@ left position as 0. This is for 0 to 5% of the animation */
     display: block;
     width: 100%;
     height: 100%;
-    background-color: white; }
+    background-color: white;
+    transition: 2s; }
     .cube__item--1 {
       /* top of the cube */
       clip-path: polygon(50% 0%, 100% 25%, 50% 50%, 0 25%); }
+      .cube__item--1:hover {
+        background-color: #0a19a1;
+        transition: 0s; }
     .cube__item--2 {
       /* left side of cube */
       clip-path: polygon(0 75%, 50% 100%, 50% 50%, 0 25%); }
