--- a/sass/_table.scss
+++ b/sass/_table.scss
@@ -38,9 +38,14 @@
     width: 100%;
     height: 100%;
     background-color: white;
+    transition: 2s;
     &--1 {
       /* top of the cube */
       clip-path: polygon(50% 0%, 100% 25%, 50% 50%, 0 25%);
+      &:hover {
+        background-color: $color-primary-dark;
+        transition: 0s;
+      }
     }
     &--2 {
       /* left side of cube */
