--- a/css/style.css
+++ b/css/style.css
@@ -681,7 +681,11 @@ left position as 0. This is for 0 to 5% of the animation */
 .table-cube__title {
   grid-row: 1 /2;
   background-color: #0a19a1;
-  display: flex; }
+  display: flex;
+  /* align title horizontally */
+  justify-content: center;
+  /* align title vertically */
+  align-items: center; }
 
 .cube {
   /* dimensions below are for overall cube shape - each polygon side going to fit within this */
@@ -694,7 +698,12 @@ left position as 0. This is for 0 to 5% of the animation */
     background-position: center;
     background-size: cover;
     /* overflow is clipped at height of the container - rest is hidden */
-    overflow: hidden; }
+    overflow: hidden;
+    display: grid;
+    /* need to use grid to centre cubes vertically */
+    align-items: center;
+    /* need to use grid to centre cubes horiztonally */
+    justify-content: center; }
   .cube__row {
     /* display inline-flex - makes the flex container display inline */
     /* inline meaning - element display inline - inside the current block on the same line */
